--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
                 version_label: 23456 
                 region: "ap-southeast-2"
                 deployment_package: deploy.zip
+                use_existing_version_if_available: true
           
           
           
