--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
           - name: Upload to S3
             run: |
-                  aws s3 sync ./build s3://test-bucket
+                  aws s3 sync ./build s3://tt-screening-bucket
             env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -40,8 +40,8 @@ jobs:
             uses: aws-actions/aws-cloudformation-github-deploy@v1
             with:
               name: MyStack
-              template: myStack.yaml
-              parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
+              template: cfn.json
+              parameter-overrides: "DBUSER=${{ secrets.DBUSER }},DBHOST=${{ secrets.DBHOST }}"
           
           
           
