--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
           - name: Upload to S3
             run: |
-                  aws s3 sync ./build s3://tt-screening-bucket
+                  aws s3 cp deploy.zip s3://tt-screening-bucket
             env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
