change stack name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           - name: Deploy to AWS CloudFormation
             uses: aws-actions/aws-cloudformation-github-deploy@v1
             with:
-              name: MyStack
+              name: test-stack
               template: cfn.json
               parameter-overrides: "DBUSER=${{ secrets.DBUSER }},DBHOST=${{ secrets.DBHOST }}"
 
