--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
             uses: actions/checkout@v2
 
           - name: Generate deployment package
-            run: zip -r deploy.zip . -x '*.git*'
+            run: zip -r web${{ github.run_id }}.zip ./web/* -x '*.git*'
 
           - name: Configure AWS credentials
             id: creds
