--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
           - name: Upload to S3
             run: |
-                  aws s3 cp deploy.zip s3://tt-screening-bucket
+                  aws s3 cp web${{ github.run_id }}.zip s3://tt-screening-bucket
             env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -49,7 +49,7 @@ jobs:
             with:
               name: test-stack
               template: cfn.json
-              parameter-overrides: "DBUSER=${{ secrets.DBUSER }},DBHOST=${{ secrets.DBHOST }}"
+              parameter-overrides: "DBUSER=${{ secrets.DBUSER }},DBHOST=${{ secrets.DBHOST }},SourceBundle=web${{ github.run_id }}.zip"
 
           
           
